--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.23",
-    "tailwindcss": "^3.4.4",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.4.5",
     "vite-plugin-eslint": "^1.8.1"
   }
